--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "@popperjs/core": "^2.6.0",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "ng2-charts": "^2.4.2",
+    "ngx-countup": "^7.3.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
